# lambda

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/lambda/: lambda.hpp  user_data.hpp
include/lambda_ptr/: lambda_ptr.hpp
tests/: basic.test.cpp  lambda.test.cpp  user_data.test.cpp
